<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/leftImageView"
            style="@style/arc_background_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/team_a_red_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/team_a_red_card_button"
            android:scaleType="centerInside"
            android:scaleX="-1"
            android:src="@drawable/red_card"
            app:layout_constraintCircle="@id/team_a_goal_button"
            app:layout_constraintCircleAngle="90"
            app:layout_constraintCircleRadius="75dp" />

        <ImageButton
            android:id="@+id/team_a_yellow_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/team_a_yellow_card_button"
            android:scaleType="centerInside"
            android:scaleX="-1"
            android:src="@drawable/yellow_card"
            app:layout_constraintCircle="@id/team_a_goal_button"
            app:layout_constraintCircleAngle="45"
            app:layout_constraintCircleRadius="75dp" />

        <ImageButton
            android:id="@+id/team_a_foul_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/team_a_foul_button"
            android:scaleType="centerInside"
            android:scaleX="-1"
            android:src="@drawable/foul_icon"
            app:layout_constraintCircle="@id/team_a_goal_button"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="75dp" />


        <ImageButton
            android:id="@+id/team_a_goal_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/team_a_goal_button"
            android:scaleType="centerCrop"
            android:src="@drawable/goal_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>